Fix Alignments

--- a/src/components/MainContentLeft.css
+++ b/src/components/MainContentLeft.css
@@ -9,7 +9,7 @@
 }
 
 .question-header {
-    width: 48vw;
+    width: 44vw;
     height: 10vh;
     margin-top: 25px;
     font-size: 18px;
