--- a/src/components/MainContentRight.css
+++ b/src/components/MainContentRight.css
@@ -1,6 +1,6 @@
 .code-editor-window {
     background-color: lightgray;
-    width: 44vw;
+    width: 45vw;
     height: 73vh;
     border-radius: 15px;
     text-align: center;
